gcc/testsuite/gdc.test/compilable/issue24018.d
struct S
{
    @disable this();
}

void main()
{
    S[] s;
    s = s ~ s;
}
