gcc/testsuite/gdc.test/fail_compilation/ice11974.d
void main() {  0 = __LINE__ ^^ [ 0 ] ; }
